kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask-app

  template:

    metadata:
      labels:
        app: flask-app

    spec:

      containers:

      - name: flask-app

        image: 523835808362.dkr.ecr.ap-south-1.amazonaws.com/flask-app:v1

        ports:
        - containerPort: 5000
